syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum PredicateType {
    PREDICATE_TYPE_UNSPECIFIED = 0;
    PREDICATE_TYPE_UNIVERSAL = 1;
    PREDICATE_TYPE_EMPTY = 2;
    PREDICATE_TYPE_AND = 3;
    PREDICATE_TYPE_OR = 4;
    PREDICATE_TYPE_NOT = 5;
    PREDICATE_TYPE_NAMESPACE_ID = 6;
    PREDICATE_TYPE_TASK_TYPE = 7;
    PREDICATE_TYPE_DESTINATION = 8;
    PREDICATE_TYPE_OUTBOUND_TASK_GROUP = 9;
    // Predicate used for grouping outbound tasks. Consists of task_group, namespace_id, and destination.
    // This replaces a previous implementation which used an AND predicate over 3 separate predicate types.
    PREDICATE_TYPE_OUTBOUND_TASK = 10;
}
